@@ -1,7 +1,8 @@
 missingh (0.11.3) unstable; urgency=low
 
   * Now added support for use on Windows.
-  * New modules: StatCompat, WindowsCompat, FilePath.
+  * New modules: StatCompat, WindowsCompat, FilePath, PlafCompat,
+    PosixConts.
 
  -- John Goerzen <jgoerzen@complete.org>  Fri, 22 Jul 2005 05:27:03 -0500
 
